Fixed alignment of navigation menu in landscape

--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -63,7 +63,7 @@
     }
 
     .logo{
-        height:50px;
+        height:6vh;
     }
     
     .main-nav{display:none;}
@@ -82,16 +82,17 @@
     .main-nav li a:link,
     .main-nav li a:visited{
         display: block; 
-        border:0
+        border:0;
     }
     
     .sticky .main-nav{
-        margin-top:5px;
+        margin-top:1vh;
     }
 
     .sticky .main-nav li a:link,
-    .sticky .main-nav li a:visited{padding: 10px 0;}
-    .sticky .mobile-nav-icon {margin-top: 10px;}
+    .sticky .main-nav li a:visited{padding: 1vh 0;}
+    
+    .sticky .mobile-nav-icon {margin-top: 1vh;}
     .sticky .mobile-nav-icon i{color:#555;}
     
     .mobile-nav-icon {
@@ -182,7 +183,7 @@
     
 
     .logo-colour{
-        height:30px;
+        height:3vh;
         margin-top:11px;
     }
     
